# ufc_fetcher

./: .gitignore  README.md  cli.py  config.json.example  config.py  pyproject.toml
core/: qbit.py  utils.py
importer/: art.py  manager.py  metadata.py
scanner/: browse.py  search.py
ufc_fetcher/: cli.py  models.py  ufc_import_trigger.py
ufc_fetcher/core/: qbit.py  utils.py
ufc_fetcher/importer/: manager.py  metadata.py
ufc_fetcher/scanner/: browse.py  search.py
ufc_fetcher/ui/: art_fetcher.py  import_gui.py
ui/: art_fetcher.py  import_gui.py
