[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-fetcher"
version = "0.1.0"
description = "A unified tool for fetching, importing, and managing UFC event media."
readme = "README.md"
authors = [{ name = "Hippy" }]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "qbittorrent-api",
    "filetype",
    "xmltodict",
]

[project.scripts]
ufc-fetcher = "ufc_fetcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ufc_fetcher*"]
